--- a/main_app/templates/jobs/index.html
+++ b/main_app/templates/jobs/index.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block content %}
 
 <h1 class="text-2xl font-primary font-bold text-primary">Welcome, Pico!</h1>
 
