--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -6,12 +6,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="{%	static 'js/main.js' %}" defer></script>
+  <script src="{%	static 'js/signup.js' %}" defer></script>
   {% tailwind_css %}
 </head>
-<body class="font-seconday p-10">
+<body class="font-seconday p-10 md:p-7 relative">
   
-  <nav class="flex">
+  <nav class="flex md:justify-end justify-center">
     <a href="#">
       <svg
         class="w-64"
@@ -39,22 +39,28 @@
     </a>
   </nav>
 
-  <main class="mt-5 flex-col items-center h-screen">
-    <h1 class="font-primary text-primary text-4xl mb-2">Make job hunting a breeze</h1>
-    <p class="md:w-1/4 mb-5 leading-7 font-light">Unlock the power of seamless job application tracking and networking insights. Elevate your career journey with our platform – effortlessly monitor applications and connections, gaining real-time status updates. Your success story begins here!</p>
-
-    <ul class="flex gap-4">
-      <li id='signup' class="bg-primary border-2 border-primary hover:bg-white hover:text-primary button-text text-white py-1 px-5 rounded-full text-sm transition duration-300 cursor-pointer">Sign Up</li>
-      <li class="bg-primary border-2 border-primary hover:bg-white hover:text-primary button-text text-white py-1 px-5 rounded-full text-sm transition duration-300 cursor-pointer">Log In</li>
-    </ul>
+  <main class="lg:m-32 mt-10 flex flex-col">
+    <div class="bg-slate-50 p-10 inline-block lg:w-1/2 rounded-lg shadow-lg">
+      <h1 class="font-primary text-primary text-3xl md:text-4xl mb-2">Make job hunting a breeze</h1>
+      <p class="md:max-w-2xl mb-5 leading-7 font-light">Unlock the power of seamless job application tracking and networking insights. Elevate your career journey with our platform – effortlessly monitor applications and connections, gaining real-time status updates. Your success story begins here!</p>
+      <ul class="flex gap-4">
+        <li id="signup" class="bg-primary border-2 border-primary hover:bg-white hover:text-primary button-text text-white py-1 px-5 rounded-full text-sm transition duration-300 cursor-pointer">Sign Up</li>
+        <a href="{% url 'login' %}"><li class="bg-primary border-2 border-primary hover:bg-white hover:text-primary button-text text-white py-1 px-5 rounded-full text-sm transition duration-300 cursor-pointer">Log In</li></a>
+      </ul>
+    </div>
     
     <p class="red-text">{{ error_message }}</p>
     
-    <form id="signup-form" class="hidden p-5 bg-slate-100 my-5 w-1/3 rounded-xl shadow-lg" method="POST" action="{% url 'signup' %}">
+    <form id="signup-form" class="hidden w-full p-5 bg-slate-100 my-5 md:w-1/3 rounded-xl shadow-lg" method="POST" action="{% url 'signup' %}">
       {% csrf_token %}
+      <h3 class="font-primary text-primary text-2xl font-bold">Create an account</h3>
       {{ form.as_p }}
       <input type="submit" class="bg-primary button-text mt-4 text-white py-1 px-5 rounded-full text-sm" value="Sign Up">
     </form>
+
+    <div class="flex justify-center lg:justify-end">
+      {% include 'splash-page-svg.html' %}
+    </div>
   </main>
 </body>
 </html>
