--- a/main_app/templates/splash-page-svg.html
+++ b/main_app/templates/splash-page-svg.html
@@ -1,9 +1,7 @@
 <svg
-class=""
+class="h-96"
 	xmlns="http://www.w3.org/2000/svg"
 	data-name="Layer 1"
-	width="726.42275"
-	height="705.12037"
 	viewBox="0 0 726.42275 705.12037"
 	xmlns:xlink="http://www.w3.org/1999/xlink">
 	<path
