--- a/main_app/templates/jobs/detail.html
+++ b/main_app/templates/jobs/detail.html
@@ -1,8 +1,82 @@
 {% extends 'base.html' %} 
 {% block content %}
 
-<h1>Job detail</h1>
+<div class="flex flex-col xl:flex-row justify-between">
+  <!-- job details top card -->
+  <section class="xl:h-screen h-fit py-7 2xl:px-12 lg:px-5 px-8 xl:w-3/4">
+    <h1 class="font-primary text-primary font-bold text-3xl">Job Application Details</h1>
+
+      <div class="card p3 my-3 min-h-fit text-center shadow-md w-full">
+        <div class="bg-green-400 flex items-center justify-start p-2">
+          <h4 class="font-semibold mx-auto">
+            {{ job.position }} @ {{ job.company }}
+          </h4>
+        </div>
 
 
+        <div class="flex flex-col xl:flex-row justify-center items-center gap-3 p-5 bg-white flex-wrap 2xl:flex-nowrap">
+          <!-- inner cards here -->
+          <div class="card xl:w-1/4 w-full xl:my-3 min-h-fit text-center shadow-md">
+            <div class="bg-gray-300 flex items-center justify-start p-2">
+              <h4 class="font-semibold mx-auto">
+                Application Status
+              </h4>
+            </div>
+            <div class="flex-col justify-center items-center p-5 bg-gray-100">
+              <p class="font-primary xl:text-xl text-4xl font-bold text-primary">
+                [Pending]
+              </p>
+            </div>
+          </div>
+          <!-- end card -->
+          <div class="card xl:w-1/4 w-full xl:my-3 min-h-fit text-center shadow-md">
+            <div class="bg-gray-300 flex items-center justify-start p-2">
+              <h4 class="font-semibold mx-auto">
+                Posted Salary
+              </h4>
+            </div>
+            <div class="flex-col justify-center items-center p-5 bg-gray-100">
+              <p class="font-primary xl:text-xl text-4xl font-bold text-green-600">
+                ${{ job.salary }}
+              </p>
+            </div>
+          </div>
+          <!-- end card -->
+          <div class="card xl:w-1/4 w-full xl:my-3 min-h-fit text-center shadow-md">
+            <div class="bg-gray-300 flex items-center justify-start p-2">
+              <h4 class="font-semibold mx-auto">
+                Location
+              </h4>
+            </div>
+            <div class="flex-col justify-center items-center p-5 bg-gray-100">
+              <p class="font-primary xl:text-xl text-4xl font-bold text-purple-500">
+                [San Diego, CA]
+              </p>
+            </div>
+          </div>
+          <!-- end card -->
+          <div class="card xl:w-1/4 w-full xl:my-3 text-center shadow-md">
+            <div class="bg-gray-300 flex items-center justify-start p-2">
+              <h4 class="font-semibold mx-auto">
+                Application Date
+              </h4>
+            </div>
+            <div class="flex-col justify-center items-center p-5 bg-gray-100">
+              <p class="font-primary xl:text-xl text-4xl font-bold text-red-500">
+                {{ job.date }}
+              </p>
+            </div>
+          </div>
+        </div>
+
+        
+      </div>
+
+  </section>
+
+  <aside class="xl:h-screen h-fit bg-white xl:w-1/4 p-7 shadow-lg">
+    <h1 class="font-primary text-primary font-bold text-3xl">To-Do (#)</h1>
+  </aside>
+</div>
 
 {% endblock %}
