--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,7 +6,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<script src="https://cdn.tailwindcss.com"></script>
 		<script src="{%	static 'js/main.js' %}" defer></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		{% tailwind_css %}
 	</head>
 
@@ -68,8 +70,7 @@
 								stroke-linejoin="round"
 								d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
 						</svg>
-						<li>Dashboard</li></a
-					>
+						<li>Dashboard</li></a>
 
 					<!-- My Job Apps Button -->
 					<a class="menu-item" href="{% url 'index' %}">
