--- a/main_app/templates/jobs/index.html
+++ b/main_app/templates/jobs/index.html
@@ -3,7 +3,7 @@
 <div class="p-7">
 
   <div class="flex justify-center xl:block">
-    <h2 class="font-primary font-bold text-primary text-3xl">My Job Applications (#)</h2>
+    <h2 class="font-primary font-bold text-primary text-3xl">My Job Applications ({{ jobs.count }})</h2>
   </div>
   <!-- status columns container -->
   <div class="mt-4 flex xl:flex-row flex-col w-full gap-5">
