--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -3,7 +3,7 @@
 
 <h1>Login</h1>
 
-<form method="POST" action="{% url 'login' %}">
+<form class="m-5" method="POST" action="{% url 'login' %}">
   {% csrf_token %}
   {{ form.as_p }}
   <input type="hidden" name="next" value="{{ next }}">
