--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -53,12 +53,12 @@
       <!--User Name-->
         <div class="mt-3">
           <label for="username" class="block text-base mb-1">Username</label>
-          <input type="text" id="username" class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-grey-600" placeholder="Enter Username" />
+          <input type="text" name="username" id="username" class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-grey-600" placeholder="Enter Username" />
         </div>
         <!--Password-->
         <div class="mt-3">
           <label for="password" class="block text-base mb-1">Password</label>
-          <input type="password" id="password" class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-grey-600" placeholder="Enter Password" />
+          <input type="password" name="password" id="password" class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-grey-600" placeholder="Enter Password" />
         </div>
         <!--Remember ME-->
           <div class="mt-3 flex justify-between item-center">
