adds styling to jobs index page

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -29,7 +29,7 @@
         <!-- Cold Job Apps Card template -->
         <a href="#">
           <div
-            class="card p3 my-3 bg-green-100 min-h-fit text-center shadow-md hover:shadow-lg hover:scale-[1.02] transition-all duration-300 ease-in-out">
+            class="card p3 my-3 bg-green-100 min-h-fit text-center hover:shadow-lg hover:scale-[1.02] transition-all duration-300 ease-in-out">
             <div class="bg-white flex items-center justify-start p-2">
               <svg
                 class="w-7 h-7 p-0.5 border-2 rounded-full border-current shrink-0 mr-2"
@@ -68,7 +68,7 @@
         <!-- Cold Connections Card template -->
         <a href="">
           <div
-            class="card p3 my-3 bg-cyan-100 min-h-fit text-center shadow-md hover:shadow-lg hover:scale-[1.01] transition-all duration-300 ease-in-out">
+            class="card p3 my-3 bg-cyan-100 min-h-fit text-center hover:shadow-lg hover:scale-[1.01] transition-all duration-300 ease-in-out">
             <div class="bg-white flex items-center justify-start p-2">
               <svg
                 class="w-7 h-7 p-0.5 border-2 rounded-full border-current shrink-0 mr-2"
