--- a/main_app/templates/jobs/index.html
+++ b/main_app/templates/jobs/index.html
@@ -24,7 +24,7 @@
         {% for job in jobs %}
           {% if job.progress == 'P'%}
             <a href="{% url 'detail' job.id %}">
-              <div class="text-sm bg-white py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner">      
+              <div class="text-sm bg-green-300 py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
                 {{ job.position }} @ {{ job.company }}
               </div>
             </a>
@@ -46,7 +46,7 @@
         {% for job in jobs %}
           {% if job.progress == 'I'%}
             <a href="{% url 'detail' job.id %}">
-              <div class="text-sm bg-white py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner">      
+              <div class="text-sm bg-green-400 py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
                 {{ job.position }} @ {{ job.company }}
               </div>
             </a>
@@ -69,7 +69,7 @@
         {% for job in jobs %}
           {% if job.progress == 'O'%}
             <a href="{% url 'detail' job.id %}">
-              <div class="text-sm bg-white py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner">      
+              <div class="text-sm bg-green-500 py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
                 {{ job.position }} @ {{ job.company }}
               </div>
             </a>
@@ -91,7 +91,7 @@
         {% for job in jobs %}
           {% if job.progress == 'R'%}
             <a href="{% url 'detail' job.id %}">
-              <div class="text-sm bg-white py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner">      
+              <div class="text-sm bg-black text-white py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
                 {{ job.position }} @ {{ job.company }}
               </div>
             </a>
@@ -109,12 +109,12 @@
     <h1 class="font-primary font-bold text-primary text-3xl mt-10">Bookmarked Jobs (#)</h1>
   </div>
 
-  <section class="card my-3 bg-violet-100 min-h-80 h-fit p-6">
-    <div class="grid grid-cols-3 gap-8">
+  <section class="card my-3 bg-violet-100 min-h-80 h-fit p-6 overflow-scroll">
+    <div class="grid grid-cols-3 gap-x-3 gap-y-1">
       {% for job in jobs %}
         {% if job.bookmarked %}
           <a href="{% url 'detail' job.id %}">
-            <div class="text-sm bg-white py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner">      
+            <div class="bg-primary font-primary text-lg text-white py-1 px-2 mb-1 min-h-10 rounded-md capitalize text-center flex justify-center items-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
               {{ job.position }} @ {{ job.company }}
             </div>
           </a>
