--- a/main_app/templates/jobs/index.html
+++ b/main_app/templates/jobs/index.html
@@ -110,7 +110,7 @@
   </div>
 
   <section class="card my-3 bg-violet-100 min-h-80 h-fit p-6 overflow-scroll">
-    <div class="grid grid-cols-3 gap-x-3 gap-y-1">
+    <div class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-x-3 gap-y-1">
       {% for job in jobs %}
         {% if job.bookmarked %}
           <a href="{% url 'detail' job.id %}">
