--- a/main_app/templates/jobs/detail.html
+++ b/main_app/templates/jobs/detail.html
@@ -2,14 +2,19 @@
 
 <div class="flex flex-col xl:flex-row justify-between">
 	<!-- gray section container -->
-	<section class="xl:h-screen h-fit py-7 2xl:px-12 lg:px-5 px-8 xl:w-3/4">
-		<div class="flex flex-col md:flex-row gap-3 items-center justify-between">
-      <h1 class="font-primary text-primary font-bold text-3xl capitalize">
+	<section class="xl:h-screen text-center md:text-left h-fit py-7 2xl:px-12 lg:px-5 px-8 xl:w-3/4">
+		<div class="flex flex-col 2xl:flex-row gap-3 items-center justify-between">
+      <h1 class="font-primary text-primary font-bold text-3xl capitalize text-pretty">
         Job Application: {{ job.position }} @ {{ job.company }}
       </h1>
-      <a href="{% url 'jobs_update' job.id %}" class="button-text bg-primary border-2 border-primary text-white text-sm px-6 py-1 rounded-full hover:text-primary hover:bg-white transition duration-300">
-        Edit Job
-      </a>
+      <div class="flex text-center">
+        <a href="{% url 'jobs_update' job.id %}" class=" mr-3 button-text bg-primary border-2 border-primary text-white text-xs px-6 py-1 rounded-full hover:text-primary hover:bg-white transition duration-300">
+          Delete Job
+        </a>
+        <a href="{% url 'jobs_update' job.id %}" class="button-text bg-primary border-2 border-primary text-white text-xs px-6 py-1 rounded-full hover:text-primary hover:bg-white transition duration-300">
+          Edit Job
+        </a>
+      </div>
     </div>
 
 		<section>
@@ -95,7 +100,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
               </svg>
             </a>
-            <p class="font-primary text-md font-normal">
+            <p class="font-primary text-md font-normal text-pretty">
                 {{ status.date }}: {{ status.description }}
             </p>
           </div>
