--- a/main_app/templates/main_app/job_form.html
+++ b/main_app/templates/main_app/job_form.html
@@ -1,1 +1,28 @@
-<h1>form</h1>
+{% extends 'base.html' %} 
+{% block content %}
+
+<div class="p-7">
+  <h1 class="font-primary text-primary font-semibold text-3xl">Add New Job</h1>
+
+  <section>
+    <!-- job details top card -->
+    <div class="card p3 my-3 min-h-fit text-center shadow-md w-full">
+      <!-- job details green header -->
+      <div class="bg-green-400 flex items-center justify-start p-2">
+        <h4 class="font-semibold mx-auto capitalize">
+          New Job Application
+        </h4>
+      </div>
+
+      <div
+        class="flex flex-col xl:flex-row justify-center items-center gap-3 p-5 bg-white flex-wrap 2xl:flex-nowrap">
+        <!-- inner cards here -->
+      </div>
+    </div>
+  </section>
+
+
+</section>
+</div>
+
+{% endblock %}
